@@ -1,12 +1,11 @@
-package com.repotracker.domain.service;
+package com.repotracker.infrastructure.controller;
 
 import com.repotracker.domain.model.Repo;
-import com.repotracker.infrastructure.client.dto.RepositoriesResponseClientDto;
+import com.repotracker.infrastructure.client.dto.GetAllReposResponseClientDto;
 import com.repotracker.infrastructure.controller.dto.request.UpdateRepoRequestDto;
 import com.repotracker.infrastructure.controller.dto.response.*;
 import com.repotracker.infrastructure.controller.dto.request.CreateRepoRequestDto;
 import org.springframework.http.HttpStatus;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -37,28 +36,29 @@ public class RepoMapper {
         return new CreateRepoResponseDto(savedRepo);
     }
 
-    public static List<Repo> mapRepositoriesResponseClientDtoToRepo(List<RepositoriesResponseClientDto> reposDto) {
+    public static List<Repo> mapFromGetAllReposResponseClientDtoToRepo(List<GetAllReposResponseClientDto> reposDto) {
         return reposDto
                 .stream()
                 .map(repo -> new Repo(repo.owner().login(), repo.name()))
                 .collect(Collectors.toList());
     }
 
-    public static RepositoriesResponseDto mapRepoToRepositoriesResponseDto(List<Repo> repos) {
+    public static CreateAllReposResponseDto mapRepoToCreateAllReposResponseDto(List<Repo> repos) {
         List<RepoDto> repoDtos = repos.stream()
                 .map(repo -> new RepoDto(repo.getId(), repo.getName(), repo.getOwner()))
-                .toList();
-
-        return new RepositoriesResponseDto(repoDtos);
+                .collect(Collectors.toList());
+        return new CreateAllReposResponseDto(repoDtos);
     }
 
     public static DeleteRepoResponseDto mapFromRepoToDeleteRepoResponseDto(Long id){
-        return new DeleteRepoResponseDto("repo with id: " + id + "deleted" , HttpStatus.OK);
+        return new DeleteRepoResponseDto("deleted repo with id: " + id , HttpStatus.OK);
     }
 
     public static Repo mapFromUpdateRepoRequestDtoToRepo(UpdateRepoRequestDto updateRepoRequestDto) {
         return new Repo(updateRepoRequestDto.owner(), updateRepoRequestDto.name());
     }
 
-
+    public static UpdateRepoResponseDto mapFromRepoToUpdateRepoResponseDto(Long id) {
+        return new UpdateRepoResponseDto("updated repo with id: " + id , HttpStatus.OK);
+    }
 }
